--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,13 +1,14 @@
 .grid {
   position: relative;
   width: 100%;
-  height: 1000px;
+  height: 100%;
   border: 1px solid #ccc;
 }
 
 .seat {
   border: 1px solid #ccc;
   padding: 10px;
+  font-size: 20px;
   text-align: center;
   cursor: pointer;
   width: 80px;
@@ -35,17 +36,9 @@
   padding: 200px;
 }
 
-.watermark {
-  display: block; 
-  position: fixed; 
-  width: 100%;  
-  height: 100%;
-  opacity: 0.3;
-}
-
 body:before{
   content: ' ';
-  position: absolute;
+  position: fixed;
   top: 0;
   bottom: 0;
   left: 0;
@@ -74,4 +67,68 @@ h1{
   background-color: #2c3e50;
   color: #ecf0f1;
   position: relative;
+}
+
+.switch-group{
+  padding: 0; 
+  display: flex; 
+  justify-content: space-evenly;
+  list-style: none;
+}
+
+.switch-seat-button {
+  position: fixed;
+  left: 0;
+  width: 2vw;
+  height: 10vh;
+  z-index: 3;
+  box-shadow: 0px 0px 2px 0px #2c3e50;
+  border-radius: 3px;
+  writing-mode: vertical-rl;
+  text-orientation: upright;
+  font-weight: bold;
+  font-size: 2vh;
+  color: #2c3e50;
+  background-color: white;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  transition: all .3s;
+  cursor: pointer;
+}
+
+.other-button {
+  width: 100px;
+  height: 40px;
+  margin: 10px auto 8px auto;
+  font-size: 16px;
+  outline: none;
+  border: none;
+  border-radius: 20px;
+  color: white;
+  background-color: #2980b9;
+  display: block;
+  cursor: pointer;
+}
+
+.input-file-button {
+  width: 100px;
+  height: 40px;
+  margin: 10px auto 8px auto;
+  font-size: 14px;
+  outline: none;
+  border: none;
+  border-radius: 20px;
+  color: white;
+  background-color: #2980b9;
+  display: none;
+  cursor: pointer;
+}
+
+.text-middle {
+  position: relative;
+  font-family:Arial, Helvetica, sans-serif;
+  bottom: 7px;
+  left: 15px;
 }
