--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -43,7 +43,7 @@ body:before{
   bottom: 0;
   left: 0;
   right: 0;
-  background:  url(../img/watermark.png);
+  background:  url(../img/watermark.jpg);
   background-position: center;  
   background-repeat: no-repeat;
   background-attachment: fixed;
