--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -43,7 +43,7 @@ body:before{
   bottom: 0;
   left: 0;
   right: 0;
-  background:  url(../img/watermark.jpg);
+  background:  url(../img/watermark.png);
   background-position: center;  
   background-repeat: no-repeat;
   background-attachment: fixed;
@@ -131,4 +131,8 @@ h1{
   font-family:Arial, Helvetica, sans-serif;
   bottom: 7px;
   left: 15px;
+}
+
+nextjs-portal{
+  display: none;
 }
