--- a/src/app/login/page.module.css
+++ b/src/app/login/page.module.css
@@ -8,6 +8,7 @@
 }
 
 .login-container {
+    margin-top: 20vh;
     width: 400px;
     height: 400px;
     border: 2px solid #999;
@@ -82,6 +83,7 @@
     color: white;
     background-color: #2980b9;
     display: block;
+    cursor: pointer;
 }
 
 .login-submit:hover {
