--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,10 +10,16 @@
   padding: 10px;
   font-size: 20px;
   text-align: center;
-  cursor: pointer;
+  cursor: default;
   width: 80px;
   height: 80px;
   background-color: #f9f9f9;
+  transition: all .3s;
+}
+
+.seat:hover {
+  color: #f9f9f9;
+  background-color: #2c3e50;
 }
 
 .details {
@@ -78,12 +84,12 @@ h1{
 
 .switch-seat-button {
   position: fixed;
-  left: 0;
+  left: 0px;
   width: 2vw;
   height: 10vh;
   z-index: 3;
-  box-shadow: 0px 0px 2px 0px #2c3e50;
-  border-radius: 3px;
+  box-shadow: 0px 0px 4px 0px #2c3e50;
+  border-radius: 6px;
   writing-mode: vertical-rl;
   text-orientation: upright;
   font-weight: bold;
@@ -98,6 +104,11 @@ h1{
   cursor: pointer;
 }
 
+.switch-seat-button:hover {
+  background-color: #2c3e50;
+  color: white;
+}
+
 .other-button {
   width: 100px;
   height: 40px;
@@ -110,6 +121,11 @@ h1{
   background-color: #2980b9;
   display: block;
   cursor: pointer;
+  transition: all .3s;
+}
+
+.other-button:hover {
+  background-color: #d35400; 
 }
 
 .input-file-button {
@@ -124,6 +140,10 @@ h1{
   background-color: #2980b9;
   display: none;
   cursor: pointer;
+}
+
+.input-file-button:hover {
+  background-color: #d35400; 
 }
 
 .text-middle {
