--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -67,7 +67,7 @@ body:before{
   bottom: 0;
   left: 0;
   right: 0;
-  background:  url(../img/watermark.jpg);
+  background:  url(../img/watermark.png);
   background-position: center;  
   background-repeat: no-repeat;
   background-attachment: fixed;
@@ -81,16 +81,17 @@ input{
 }
 
 h1{
+  background-color: #2c3e50;
+  width: 100%;
+  height: 100px;
+  margin: 0px;
+  margin-bottom: 10px;
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
   font-family:Arial, Helvetica, sans-serif;
-  width: 100%;
-  height: 80px;
-  background-color: #2c3e50;
   color: #ecf0f1;
-  position: relative;
 }
 
 .switch-group{
@@ -128,7 +129,7 @@ h1{
 }
 
 .other-button {
-  width: 150px;
+  width: 100px;
   height: 40px;
   margin: 10px auto 8px auto;
   font-size: 16px;
@@ -168,7 +169,7 @@ h1{
   position: relative;
   font-family:Arial, Helvetica, sans-serif;
   bottom: 7px;
-  left: 40px;
+  left: 15px;
 }
 
 .swap-options {
