--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -24,6 +24,11 @@
   background-color: #2c3e50;
 }
 
+.seat-selected {
+  color: #f9f9f9;
+  background-color: #2c3e50;
+}
+
 .seat.swap-mode {
   color: #f9f9f9;
   background-color: #2c3e50;
@@ -67,17 +72,37 @@ body:before{
   bottom: 0;
   left: 0;
   right: 0;
-  background:  url(../img/watermark.png);
+  background:  url(../img/watermark.jpg);
   background-position: center;  
   background-repeat: no-repeat;
   background-attachment: fixed;
   z-index: -1;
-  opacity: 0.2;
+  opacity: 0.1;
 }
 
 input{
   -webkit-border-radius: 5px;
   border-radius: 5px; 
+}
+
+.search-input {
+  display: flex;
+  justify-content: center;
+}
+
+.txt-input {
+  width: 70%;
+  font-size: 20px;
+  margin-bottom: 10px;
+  height: 36px;
+  border-radius: 20px;
+  border: 2px solid #999;
+  padding: 0px 10px;
+  outline: none;
+}
+
+.txt-input:focus-within {
+  border: 2px solid #2980b9;
 }
 
 h1{
@@ -194,6 +219,79 @@ h1{
 
 .swap-options input[type="checkbox"] {
   margin-right: 5px;
+}
+
+.header-image {
+  width: 20%;
+  height: auto;
+  border: 1px solid #ccc;
+  border-radius: 20px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+.img-seating1 {
+  content: ' ';
+  position: absolute;
+  width: 100%;
+  height: 120%;
+  border-radius: 20px;
+  background: url(../img/office1.png);
+  background-position: right;  
+  background-repeat: no-repeat;
+  z-index: -1;
+  opacity: 0.8;
+}
+
+.img-seating2 {
+  content: ' ';
+  position: absolute;
+  width: 100%;
+  height: 120%;
+  border-radius: 20px;
+  background: url(../img/office2.png);
+  background-position: right;  
+  background-repeat: no-repeat;
+  z-index: -1;
+  opacity: 0.8;
+}
+
+.img-seating3 {
+  content: ' ';
+  position: absolute;
+  width: 100%;
+  height: 120%;
+  border-radius: 20px;
+  background: url(../img/office3.png);
+  background-position: right;  
+  background-repeat: no-repeat;
+  z-index: -1;
+  opacity: 0.8;
+}
+
+.img-seating4 {
+  content: ' ';
+  position: absolute;
+  width: 100%;
+  height: 120%;
+  border-radius: 20px;
+  background: url(../img/office4.png);
+  background-position: right;  
+  background-repeat: no-repeat;
+  z-index: -1;
+  opacity: 0.8;
+}
+
+.img-seating6 {
+  content: ' ';
+  position: absolute;
+  width: 100%;
+  height: 120%;
+  border-radius: 20px;
+  background: url(../img/office6.png);
+  background-position: right;  
+  background-repeat: no-repeat;
+  z-index: -1;
+  opacity: 0.8;
 }
 
 nextjs-portal{
