--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,23 +5,77 @@
   border: 1px solid #ccc;
 }
 
+.filter-container {
+  display: flex;
+  justify-content: flex-end;
+  padding: 10px;
+  margin-bottom: 10px;
+}
+
+.filter-container label {
+  font-size: 20px;
+  cursor: pointer;
+  user-select: none;
+}
+
+.filter-container input {
+  margin-right: 5px;
+  cursor: pointer;  
+}
+
 .seat {
   border: 1px solid #ccc;
   padding: 10px;
   font-size: 20px;
   text-align: center;
   cursor: default;
-  width: 80px;
-  height: 80px;
   font-weight: bold;
   color: #2c3e50;
   background-color: #f9f9f9;
   transition: all .3s;
 }
 
-.seat:hover {
+.seat-seat {
+  width: 80px;
+  height: 80px;
+}
+
+.seat-other {
+  width: 80px;
+  height: 80px;
+  background-color: #ffe4b5;
+}
+
+.seat-screenH {
+  width: 80px;
+  height: 40px;
+  background-color: #add8e6;
+}
+
+.seat-screenV {
+  width: 40px;
+  height: 80px;
+  background-color: #add8e6;
+}
+
+.seat-seat:hover {
   color: #f9f9f9;
   background-color: #2c3e50;
+}
+
+.seat-other:hover {
+  color: #ffe4b5;
+  background-color: #d4a052;
+}
+
+.seat-screenH:hover {
+  color: #add8e6;
+  background-color: #1b4d63;
+}
+
+.seat-screenV:hover {
+  color: #add8e6;
+  background-color: #1b4d63;
 }
 
 .seat-selected {
